--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-icons": "^1.10.2",
     "core-js": "^3.3.2",
+    "cors": "^2.8.5",
     "firebase": "^7.17.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.0",
